--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,8 @@
     min-height: 100vh;
 
 }
-.mateWare-serviceBox {
-    background: rgb(36,36,36);
-    background: linear-gradient(90deg, rgba(36,36,36,1) 0%, rgba(99,99,99,1) 100%);
-    min-height: 100vh;
-    min-width: fit-content;
+.mateWare-service {
+    background: rgb(70, 70, 70);
 }
 .mateWare-456 {
     background: rgb(173,255,130);
@@ -19,4 +16,10 @@
 .mateWare-ourteamCard {
     border-radius:50%; 
     width: 250px;
+}
+.mateware-list {
+    list-style: none;
+}
+.mateWare-serviceRow {
+
 }
